Tutorial-FishboneMoncriefID: small formatting tweaks. No functional change

--- a/Tutorial-FishboneMoncriefID.ipynb
+++ b/Tutorial-FishboneMoncriefID.ipynb
@@ -258,7 +258,7 @@
     "# Term 6 of Eq 3.6\n",
     "mln_h_in += 2*a*M*r_in*l/Ain\n",
     "\n",
-    "hm1 = sp.exp(ln_h + mln_h_in) - 1\n"
+    "hm1 = sp.exp(ln_h + mln_h_in) - 1"
    ]
   },
   {
@@ -439,6 +439,9 @@
     "    transformBLtoKS[i][i] = 1\n",
     "transformBLtoKS[0][1] = 2*r/(r**2 - 2*r + a*a)\n",
     "transformBLtoKS[3][1] =   a/(r**2 - 2*r + a*a)\n",
+    "#uBL4U = ixp.declarerank1(\"UBL4U\",DIM=4)\n",
+    "# After the xform below, print(uKS4U) outputs: \n",
+    "# [UBL4U0 + 2*UBL4U1*r/(a**2 + r**2 - 2*r), UBL4U1, UBL4U2, UBL4U1*a/(a**2 + r**2 - 2*r) + UBL4U3]\n",
     "uKS4U = ixp.zerorank1(DIM=4)\n",
     "for i in range(4):\n",
     "    for j in range(4):\n",
@@ -1126,14 +1129,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook Tutorial-FishboneMoncriefID.ipynb to latex\r\n"
+      "[NbConvertApp] Converting notebook Tutorial-FishboneMoncriefID.ipynb to latex\n",
+      "[NbConvertApp] Writing 150279 bytes to Tutorial-FishboneMoncriefID.tex\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n"
      ]
     }
    ],
