SEOBNR: update inital condition documentation.

--- a/Tutorial-SEOBNR_Initial_Conditions.ipynb
+++ b/Tutorial-SEOBNR_Initial_Conditions.ipynb
@@ -48,19 +48,22 @@
     "# Introduction: The Physical System of Interest \\[Back to [top](#toc)\\]\n",
     "$$\\label{intro}$$\n",
     "\n",
-    "Consider two black holes with masses $m_{1}$, $m_{2}$ and spins ${\\bf S}_{1}$, ${\\bf S}_{2}$ in a binary system.  The spinning effective one-body (\"SEOB\") Hamiltonian $H_{\\rm real}$ (see [BB2010](https://arxiv.org/abs/0912.3517) Equation (5.69)) describes the dynamics of this system.  We seek initial conditions for nonadiabatic evolutions of such a system, and follow [BCD2006](https://arxiv.org/abs/gr-qc/0508067) Section IV A.\n",
+    "Consider two compact objects (e.g. black holes or neutron stars) with masses $m_{1}$, $m_{2}$ and spins ${\\bf S}_{1}$, ${\\bf S}_{2}$ in a binary system.  The spinning effective one-body (\"SEOB\") Hamiltonian $H_{\\rm real}$ (see [BB2010](https://arxiv.org/abs/0912.3517) Equation (5.69)) describes the dynamics of this system.  We seek initial conditions for nonadiabatic evolutions of such a system, and follow [BCD2006](https://arxiv.org/abs/gr-qc/0508067) Section IV A.\n",
     "\n",
     "Please note that throughout this notebook we adpot the following conventions:\n",
-    "1. $c = G = 1$ where $c$ is the speed of light in a vacuum and $G$ is Newton's gravitational constant.\n",
+    "1. $c = G = 1$ where $c$ is the speed of light in a vacuum and $G$ is Newton's gravitational constant, and\n",
+    "1. hatted vectors (e.g. $\\hat{\\bf L}_{N}$) usually denote scaled or unit vectors.\n",
     "\n",
     "We start with the following parameters:\n",
     "1. binary parameters $m_{1}$, $m_{2}$, ${\\bf S}_{1}$, and ${\\bf S}_{2}$,\n",
     "1. system inclination $\\iota$ and initial frequency $f$, and\n",
-    "1. SEOB model parameters.\n",
+    "1. SEOB model parameters (constants dependent on $m_{1}$, $m_{2}$.\n",
     "\n",
     "Our goal is to produce initial dynamical variables\n",
     "1. ${\\bf x} = \\left( x, y, z \\right)$, and\n",
     "1. ${\\bf p} = \\left( p_{x}, p_{y}, p_{z} \\right)$.\n",
+    "\n",
+    "We choose a spatial coordinate basis $\\left\\{ {\\bf e}_{1}, {\\bf e}_{2}, {\\bf e}_{3} \\right\\}$ so that the initial separation vector ${\\bf r}$ between the compact objects lies in the ${\\bf e}_{1},{\\bf e}_{3}$-plane.\n",
     "\n",
     "We include below the physical parameters necessary to compute the initial conditions.  Solving for the initial conditions requires computing $\\frac{ \\partial H_{\\rm real} }{ \\partial p_{i} }$ for $i \\in \\left\\{ x, y, z \\right\\}$, <font color='red'>which we defer to another module</font>.\n",
     "\n",
@@ -103,7 +106,7 @@
    "source": [
     "<a id='massterms'></a>\n",
     "\n",
-    "## Mass and separation terms \\[Back to [top](#toc)\\]\n",
+    "## Mass and spin terms \\[Back to [top](#toc)\\]\n",
     "$$\\label{massterms}$$\n",
     "\n",
     "We begin by defining the following useful quantities:\n",
@@ -142,7 +145,7 @@
     "## Orbital Angular Momenutm $\\hat{\\bf L}_{N}$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{ln}$$\n",
     "\n",
-    "From LALSimIMRSpinEOBInitialConditionsPrec.c Lines 789-791, we have\n",
+    "Since we assume that the initial separation vector ${\\bf r}$ between $m_{1}$ and $m_{2}$ lies in the ${\\bf e}_{1},{\\bf e}_{3}$-plane, the inital orbital anbular momentum vector ${\\bf L}_{N}$ is given by\n",
     "\n",
     "\\begin{align*}\n",
     "    \\hat{\\bf L}_{N}^{x} &= \\sin \\left( \\iota \\right) \\\\\n",
@@ -150,7 +153,7 @@
     "    \\hat{\\bf L}_{N}^{z} &= \\cos \\left( \\iota \\right)\n",
     "\\end{align*}\n",
     "\n",
-    "<font color='red'>The code says this was taken \"from STPN code\"; find out what this means.  Since $\\iota = 0$ is always set before this function, it is unclear if we need to actually compute these values.</font>"
+    "<font color='red'>${\\bf L}_{N}$ is computed at LALSimIMRSpinEOBInitialConditionsPrec.c Lines 789-791.  Line 787 says \"taken from STPN code\"; is this supposed to constitute a reference?  This appears to be (Euclidean) geometry... Furthermore, we hard-code $\\iota = 0$ before the function XLALSimIMRSpinEOBInitialConditionsPrec is called (see LALSimIMRSpinPrecEOB.c Lines 1283 and 1311).  Thus it is unclear that we need to actually compute these values (rather than just setting ${\\bf L}_{N} = \\left( 0, 0, 1 \\right)$.</font>"
    ]
   },
   {
