--- a/Tutorial-Start_to_Finish-GiRaFFE_HO-Aligned_Rotator.ipynb
+++ b/Tutorial-Start_to_Finish-GiRaFFE_HO-Aligned_Rotator.ipynb
@@ -4,30 +4,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Start-to-Finish Example: $\\text{GiRaFFE_HO}$ Aligned Rotator\n",
+    "# Start-to-Finish Example: `GiRaFFE_HO` Aligned Rotator\n",
     "\n",
-    "### Author: Patrick Nelson\n",
+    "## Author: Patrick Nelson\n",
+    "### Formatting improvements courtesy Brandon Clark\n",
+    "\n",
+    "## This module implements a basic GRFFE code to evolve a toy model of a neutron star magnetosphere\n",
     "\n",
     "### Adapted from [Start-to-Finish Example: Head-On Black Hole Collision](Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb)\n",
     "\n",
-    "## This module implements a basic GRFFE code to evolve a toy model of a neutron star magnetosphere.\n",
+    "\n",
     "\n",
     "### NRPy+ Source Code for this module: \n",
-    "1. [GiRaFFEfood_HO/GiRaFFEfood_HO_AlignedRotator.py](../edit/GiRaFFEfood_HO/GiRaFFEfood_HO_AlignedRotator.py); [\\[**tutorial**\\]](Tutorial-GiRaFFEfood_HO_Aligned_Rotator.ipynb): Aligned rotator initial data, sets all FFE variables in a Cartesian basis.\n",
-    "1. [GiRaFFE_HO/GiRaFFE_Higher_Order.py](../edit/GiRaFFE_HO/GiRaFFE_Higher_Order.py); [\\[**tutorial**\\]](Tutorial-GiRaFFE_Higher_Order.ipynb): Generates the right-hand sides for the GRFFE evolution equations in Cartesian coordinates.\n",
-    "We will also borrow C code from the ETK implementation of $\\text{GiRaFFE_HO}$\n",
+    "* [GiRaFFEfood_HO/GiRaFFEfood_HO_AlignedRotator.py](../edit/GiRaFFEfood_HO/GiRaFFEfood_HO_AlignedRotator.py); [\\[**tutorial**\\]](Tutorial-GiRaFFEfood_HO_Aligned_Rotator.ipynb): Aligned rotator initial data, sets all FFE variables in a Cartesian basis.\n",
+    "* [GiRaFFE_HO/GiRaFFE_HO.py](../edit/GiRaFFEfood_HO/GiRaFFEfood_HO_AlignedRotator.py); [\\[**tutorial**\\]](Tutorial-GiRaFFEfood_HO_Aligned_Rotator.ipynb): Generates the right-hand sides for the GRFFE evolution equations in Cartesian coordinates.\n",
+    "We will also borrow C code from the ETK implementation of `GiRaFFE_HO`\n",
     "\n",
+    "## Introduction:\n",
     "Here we use NRPy+ to generate the C source code necessary to set up initial data for a model neutron star (see [the original GiRaFFE paper](https://arxiv.org/pdf/1704.00599.pdf)). Then we use it to generate the RHS expressions for [Method of Lines](https://reference.wolfram.com/language/tutorial/NDSolveMethodOfLines.html) time integration based on the [explicit Runge-Kutta fourth-order scheme](https://en.wikipedia.org/wiki/Runge%E2%80%93Kutta_methods) (RK4).\n",
     "\n",
     "The entire algorithm is outlined below, with NRPy+-based components highlighted in <font color='green'>green</font>.\n",
     "\n",
     "1. Allocate memory for gridfunctions, including temporary storage for the RK4 time integration.\n",
-    "1. (**Step 2** below) <font color='green'>Set gridfunction values to initial data (**[documented in previous start-to-finish module](Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_two_BH_initial_data.ipynb)**).</font>\n",
+    "1. <font color='green'>Set gridfunction values to initial data (**[documented in previous start-to-finish module](Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_two_BH_initial_data.ipynb)**).</font>\n",
     "1. Evolve the initial data forward in time using RK4 time integration. At each RK4 substep, do the following:\n",
-    "    1. (**Step 3A** below) <font color='green'>Evaluate BSSN RHS expressions.</font>\n",
-    "    1. (**Step 4** below) Apply singular, curvilinear coordinate boundary conditions [*a la* the SENR/NRPy+ paper](https://arxiv.org/abs/1712.07658)\n",
-    "1. (**Step 3B** below) At the end of each iteration in time, output the <font color='green'>FFE variables</font>. (This is in Step 3B, because Step 4 requires that *all* gridfunctions be defined.)\n",
+    "    1. <font color='green'>Evaluate GRFFE RHS expressions.</font>\n",
+    "    1. Apply singular, curvilinear coordinate boundary conditions [*a la* the SENR/NRPy+ paper](https://arxiv.org/abs/1712.07658)\n",
+    "1.  At the end of each iteration in time, output the <font color='green'>FFE variables</font>.\n",
     "1. Repeat above steps at two numerical resolutions to confirm convergence to the expected value."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc'></a>\n",
+    "\n",
+    "# Table of Contents\n",
+    "$$\\label{toc}$$\n",
+    "\n",
+    "This module is organized as follows\n",
+    "\n",
+    "1. [Step 1](#initializenrpy): Set core NRPy+ parameters for numerical grids and reference metric\n",
+    "1. [Step 2](#rotator_id): Import Aligned Rotator initial data C function\n",
+    "1. [Step 3](#poynting_id): Import densitized Poynting flux initial data conversion C function\n",
+    "1. [Step 4](#bssn_rhs): Output BSSN RHS expressions\n",
+    "1. [Step 5](#a_and_b): Output A-to-B expressions\n",
+    "1. [Step 6](#apply_bcs): Apply singular, curvilinear coordinate boundary conditions\n",
+    "1. [Step 7](#mainc): $\\rm{GiRaFFE\\_standalone.c}$: The Main C Code\n",
+    "1. [Step 8](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='initializenrpy'></a>\n",
+    "\n",
+    "# Step 1: Set core NRPy+ parameters for numerical grids and reference metric \\[Back to [top](#toc)\\]\n",
+    "$$\\label{initializenrpy}$$"
    ]
   },
   {
@@ -96,11 +131,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 2A: Import Aligned Rotator initial data C function\n",
+    "<a id='rotator_id'></a>\n",
     "\n",
-    "The [GiRaFFEfood_HO.GiRaFFEfood_HO_AlignedRotator.py](../edit/GiRaFFEfood_HO/GiRaFFEfood_HO_AlignedRotator.py) NRPy+ module does the following:\n",
+    "# Step 2: Import Aligned Rotator initial data C function \\[Back to [top](#toc)\\]\n",
+    "$$\\label{rotator_id}$$\n",
     "\n",
-    "1. Set up Aligned rotator initial data quantities in the **Cartesian basis**, as [documented here](Tutorial-GiRaFFEfood_HO_Aligned_Rotator.ipynb). \n"
+    "The [GiRaFFEfood_HO.GiRaFFEfood_HO_AlignedRotator](../edit/GiRaFFEfood_HO/GiRaFFEfood_HO_AlignedRotator.py) NRPy+ module sets up Aligned rotator initial data quantities in the **Cartesian basis**, as [documented here](Tutorial-GiRaFFEfood_HO_Aligned_Rotator.ipynb). \n"
    ]
   },
   {
@@ -155,7 +191,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 2C: Import densitized Poynting flux initial data conversion C function\n",
+    "<a id='poynting_id'></a>\n",
+    "\n",
+    "# Step 3: Import densitized Poynting flux initial data conversion C function \\[Back to [top](#toc)\\]\n",
+    "$$\\label{poynting_id}$$\n",
     "\n",
     "The [GiRaFFEfood_HO.GiRaFFEfood_HO.py](../edit/GiRaFFEfood_HO/GiRaFFEfood_HO.py) NRPy+ module does the following:\n",
     "\n",
@@ -214,7 +253,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 3A: Output BSSN RHS expressions"
+    "<a id='bssn_rhs'></a>\n",
+    "\n",
+    "# Step 4: Output BSSN RHS expressions \\[Back to [top](#toc)\\]\n",
+    "$$\\label{bssn_rhs}$$"
    ]
   },
   {
@@ -332,9 +374,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Steps 3B & 2B: Output A-to-B expressions\n",
+    "<a id='a_and_b'></a>\n",
     "\n",
-    "These expressions are used to calculate the magnetic fields from the vector potential. See [here](Tutorial-ETK_thorn-GiRaFFE_Higher_Order_v2.ipynb#step1p6) for more information on why they are implemented the way they are. "
+    "# Step 5: Output A-to-B expressions \\[Back to [top](#toc)\\]\n",
+    "$$\\label{a_and_b}$$\n",
+    "\n",
+    "These expressions are used to calculate the magnetic fields from the vector potential. See [here](Tutorial-ETK_thorn-GiRaFFE_Higher_Order_v2.ipynb#a2bdriver) for more information on why they are implemented the way they are. "
    ]
   },
   {
@@ -483,7 +528,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 4: Apply singular, curvilinear coordinate boundary conditions [as documented in the corresponding NRPy+ tutorial module](Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb)"
+    "<a id='apply_bcs'></a>\n",
+    "\n",
+    "# Step 6: Apply singular, curvilinear coordinate boundary conditions \\[Back to [top](#toc)\\]\n",
+    "$$\\label{apply_bcs}$$\n",
+    "\n",
+    "Next apply singular, curvilinear coordinate boundary conditions [as documented in the corresponding NRPy+ tutorial module](Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb)"
    ]
   },
   {
@@ -512,7 +562,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# GiRaFFE_standalone.c: The Main C Code"
+    "<a id='mainc'></a>\n",
+    "\n",
+    "# Step 7: `GiRaFFE_standalone.c`: The Main C Code \\[Back to [top](#toc)\\]\n",
+    "$$\\label{mainc}$$"
    ]
   },
   {
@@ -1077,7 +1130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will also need the conservative-to-primitive solver, $\\text{driver_conserv_to_prims_FFE.C}$,modified from the original $\\text{GiRaFFE}$, and further modified away from its ETK functionalities. That file requires the function from $\\text{compute_conservatives_FFE.C}$ and the header file $\\text{GiRaFFE_headers.h}$"
+    "We will also need the conservative-to-primitive solver, `driver_conserv_to_prims_FFE.C`,modified from the original `GiRaFFE`, and further modified away from its ETK functionalities. That file requires the function from `compute_conservatives_FFE.C` and the header file `GiRaFFE_headers.h`"
    ]
   },
   {
@@ -1572,7 +1625,7 @@
      "text": [
       "Now compiling, should take ~10 seconds...\n",
       "\n",
-      "Finished in 1.54968094826 seconds.\n",
+      "Finished in 1.7930858135223389 seconds.\n",
       "\n",
       "Now running at low-resolution. Should take ~25 seconds...\n",
       "\n",
@@ -1615,8 +1668,8 @@
       "Computing A to B at z = max...\n",
       "Starting conservative-to-primitive solver...\n",
       "Writing output...\n",
-      "\u001b[2KIt: 1 t=0.13 | 100.0%; ETA 0 s | t/h 486.38 | gp/s 1.50e+07\n",
-      "Finished in 1.32306694984 seconds.\n",
+      "\u001b[2KIt: 1 t=0.13 | 100.0%; ETA 0 s | t/h 342.01 | gp/s 1.05e+07\n",
+      "Finished in 1.881011962890625 seconds.\n",
       "\n",
       "Now running at higher-resolution. Should take ~75 seconds...\n",
       "\n"
@@ -1640,11 +1693,48 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<a id='latex_pdf_output'></a>\n",
+    "\n",
+    "# Step 8: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "$$\\label{latex_pdf_output}$$\n",
+    "\n",
+    "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
+    "[Tutorial-Start_to_Finish-GiRaFFE_HO-Aligned_Rotator.pdf](Tutorial-Start_to_Finish-GiRaFFE_HO-Aligned_Rotator.pdf) (Note that clicking on this link may not work; you may need to open the PDF file through another means.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook Tutorial-Start_to_Finish-GiRaFFE_HO-Aligned_Rotator.ipynb to latex\n",
+      "[NbConvertApp] Writing 250998 bytes to Tutorial-Start_to_Finish-GiRaFFE_HO-Aligned_Rotator.tex\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx Tutorial-Start_to_Finish-GiRaFFE_HO-Aligned_Rotator.ipynb\n",
+    "!pdflatex -interaction=batchmode Tutorial-Start_to_Finish-GiRaFFE_HO-Aligned_Rotator.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-Start_to_Finish-GiRaFFE_HO-Aligned_Rotator.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-Start_to_Finish-GiRaFFE_HO-Aligned_Rotator.tex\n",
+    "!rm -f Tut*.out Tut*.aux Tut*.log"
+   ]
   }
  ],
  "metadata": {
