--- a/Tutorial-GiRaFFEfood_HO_1D_tests.ipynb
+++ b/Tutorial-GiRaFFEfood_HO_1D_tests.ipynb
@@ -163,7 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "AD = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"AD\")\n",
+    "AD = ixp.register_gridfunctions_for_single_rank1(\"EVOL\",\"AD\")\n",
     "AleftD = ixp.zerorank1()\n",
     "\n",
     "AleftD[0] = sp.sympify(0)\n",
@@ -531,7 +531,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-GiRaFFEfood_HO_1D_tests.ipynb to latex\n",
-      "[NbConvertApp] Writing 55443 bytes to Tutorial-GiRaFFEfood_HO_1D_tests.tex\n",
+      "[NbConvertApp] Writing 50119 bytes to Tutorial-GiRaFFEfood_HO_1D_tests.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -555,21 +555,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
