--- a/Tutorial-SEOBNR_Documentation.ipynb
+++ b/Tutorial-SEOBNR_Documentation.ipynb
@@ -1082,7 +1082,7 @@
     "\\begin{align*}\n",
     "    p_{r} &= \\hat{\\bf p} \\cdot {\\bf n} \\\\\n",
     "    p_{\\theta} &= \\hat{\\bf p} \\cdot {\\bf v} \\frac{ r }{ \\sin \\theta } \\\\\n",
-    "    p_{\\phi} &= \\hat{\\bf p} \\cdot \\boldsymbol{\\xi} r\n",
+    "    p_{\\phi} &= \\hat{\\bf p} \\cdot \\boldsymbol{\\xi} r.\n",
     "\\end{align*}\n",
     "\n",
     "Therefore\n",
@@ -1828,7 +1828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1842,7 +1842,7 @@
    "source": [
     "%%writefile -a SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
     "\n",
-    "sigmastarcoeffTerm3 = coeffs->d1 * eta * sigmaStar->data[0] * u3"
+    "sigmastarcoeffTerm3 = d1*eta*sigmaStar1/(r*r*r)"
    ]
   },
   {
@@ -1997,7 +1997,7 @@
    "source": [
     "%%writefile -a SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
     "\n",
-    "sigmacoeffTerm3 ="
+    "sigmacoeffTerm3 = eta*dv1"
    ]
   },
   {
@@ -4323,7 +4323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -4333,7 +4333,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-SEOBNR_Documentation.ipynb to latex\n",
-      "[NbConvertApp] Writing 192936 bytes to Tutorial-SEOBNR_Documentation.tex\n",
+      "[NbConvertApp] Writing 173411 bytes to Tutorial-SEOBNR_Documentation.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -4353,25 +4353,32 @@
     "!pdflatex -interaction=batchmode Tutorial-SEOBNR_Documentation.tex\n",
     "!rm -f Tut*.out Tut*.aux Tut*.log"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
