reference_metric; reference metric tut module: whitespace improvements; add Cartesian grid plot

--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_two_BH_initial_data.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_two_BH_initial_data.ipynb
@@ -177,9 +177,10 @@
      "output_type": "stream",
      "text": [
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_SQRT1_2\n",
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n",
       "Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.\n",
-      "Finished in 8.70870304108 seconds.\n",
+      "Finished in 10.8766171932 seconds.\n",
       "Output C implementation of Hamiltonian constraint to BSSN/Hamiltonian.h\n"
      ]
     }
@@ -251,6 +252,7 @@
      "output_type": "stream",
      "text": [
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_SQRT1_2\n",
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n",
       "Output C implementation of det(gammabar) constraint to file BSSN/enforce_detgammabar_constraint.h\n"
      ]
@@ -761,7 +763,7 @@
       "[NbConvertApp] Making directory Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_two_BH_initial_data_files\n",
       "[NbConvertApp] Making directory Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_two_BH_initial_data_files\n",
       "[NbConvertApp] Making directory Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_two_BH_initial_data_files\n",
-      "[NbConvertApp] Writing 74543 bytes to Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_two_BH_initial_data.tex\n",
+      "[NbConvertApp] Writing 75246 bytes to Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_two_BH_initial_data.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
