Tutorial-Start_to_Finish-ScalarWaveCurvilinear: add #include for Windows compatibility

--- a/Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb
@@ -464,7 +464,7 @@
     "#include \"stdio.h\"\n",
     "#include \"stdlib.h\"\n",
     "#include \"math.h\"\n",
-    "\n",
+    "#include \"stdint.h\" // Needed for Windows GCC 6.x compatibility\n",
     "#ifndef M_PI\n",
     "#define M_PI 3.141592653589793238462643383279502884L\n",
     "#endif\n",
