Fixed related bugs pertaining to the cutoff radius.

--- a/Tutorial-Start_to_Finish-GiRaFFE_HO-Aligned_Rotator.ipynb
+++ b/Tutorial-Start_to_Finish-GiRaFFE_HO-Aligned_Rotator.ipynb
@@ -149,6 +149,7 @@
      "output_type": "stream",
      "text": [
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_SQRT1_2\n",
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::xmin\n",
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::xmax\n",
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::ymin\n",
@@ -214,6 +215,7 @@
      "output_type": "stream",
      "text": [
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_SQRT1_2\n",
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::xmin\n",
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::xmax\n",
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::ymin\n",
@@ -783,6 +785,20 @@
     "    REAL invdx1 = 1.0/dxx[1];\n",
     "    REAL invdx2 = 1.0/dxx[2];\n",
     "#include \"Conservs.h\"\n",
+    "    int idx;\n",
+    "    LOOP_REGION(0,Nxx_plus_2NGHOSTS[0],0,Nxx_plus_2NGHOSTS[1],0,Nxx_plus_2NGHOSTS[2]){\n",
+    "        REAL minrad2 = min_radius_inside_of_which_conserv_to_prims_FFE_and_FFE_evolution_is_DISABLED*min_radius_inside_of_which_conserv_to_prims_FFE_and_FFE_evolution_is_DISABLED;\n",
+    "        if (sq_radial_coord(xx[0][i0],xx[1][i1],xx[2][i2]) < minrad2){\n",
+    "            idx = IDX3(i0,i1,i2);\n",
+    "            rhs_gfs[IDX4pt(STILDED0GF, idx)] = 0.0;\n",
+    "            rhs_gfs[IDX4pt(STILDED1GF, idx)] = 0.0;\n",
+    "            rhs_gfs[IDX4pt(STILDED2GF, idx)] = 0.0;\n",
+    "            rhs_gfs[IDX4pt(AD0GF, idx)] = 0.0;\n",
+    "            rhs_gfs[IDX4pt(AD1GF, idx)] = 0.0;\n",
+    "            rhs_gfs[IDX4pt(AD2GF, idx)] = 0.0;\n",
+    "            rhs_gfs[IDX4pt(PSI6PHIGF, idx)] = 0.0;\n",
+    "        }\n",
+    "    }\n",
     "}\n",
     "\n",
     "// main() function:\n",
@@ -1507,7 +1523,7 @@
      "text": [
       "Now compiling, should take ~10 seconds...\n",
       "\n",
-      "Finished in 1.53987407684 seconds.\n",
+      "Finished in 1.59893894196 seconds.\n",
       "\n",
       "Now running at low-resolution. Should take ~25 seconds...\n",
       "\n",
@@ -1550,8 +1566,8 @@
       "Computing A to B at z = max...\n",
       "Starting conservative-to-primitive solver...\n",
       "Writing output...\n",
-      "\u001b[2KIt: 1 t=0.13 | 100.0%; ETA 0 s | t/h 476.37 | gp/s 1.47e+07\n",
-      "Finished in 1.36454987526 seconds.\n",
+      "\u001b[2KIt: 1 t=0.13 | 100.0%; ETA 0 s | t/h 478.47 | gp/s 1.47e+07\n",
+      "Finished in 1.36260795593 seconds.\n",
       "\n",
       "Now running at higher-resolution. Should take ~75 seconds...\n",
       "\n"
@@ -1597,7 +1613,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-Start_to_Finish-GiRaFFE_HO-Aligned_Rotator.ipynb to latex\n",
-      "[NbConvertApp] Writing 149511 bytes to Tutorial-Start_to_Finish-GiRaFFE_HO-Aligned_Rotator.tex\n",
+      "[NbConvertApp] Writing 155554 bytes to Tutorial-Start_to_Finish-GiRaFFE_HO-Aligned_Rotator.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
