--- a/Tutorial-SEOBNR_Initial_Conditions.ipynb
+++ b/Tutorial-SEOBNR_Initial_Conditions.ipynb
@@ -330,22 +330,33 @@
     "\n",
     "$$\\label{roots}$$\n",
     "\n",
-    "<font color='red'>**Note: LALSuite scales the following values; see LALSimIMRSpinEOBInitialConditionsPrec.c Line 899.**</font>\n",
+    "<font color='red'>**Note: LALSuite scales the initial guesses given to the root-finding routine; see LALSimIMRSpinEOBInitialConditionsPrec.c Line 899.**</font>\n",
     "\n",
-    "We will write components of the momentum vector ${\\bf p}$ in spherical coordinates with components ${\\bf p}^{r}$, ${\\bf p}^{\\phi}$, and ${\\bf p}^{\\theta}$.\n",
+    "We will write components of the momentum vector ${\\bf p}$ in spherical coordinates with components ${\\bf p}^{r}$, ${\\bf p}^{\\theta}$, and ${\\bf p}^{\\phi}$.\n",
     "\n",
-    "<font color='red'>These are initial guesses for the root-finding routine.</font>  That ${\\bf p}^{r} = 0$ is from [BCD2006](https://arxiv.org/abs/gr-qc/0508067) Equation 4.9.\n",
+    "<font color='red'>These are initial guesses for the root-finding routine:\n",
     "\n",
     "\\begin{align*}\n",
     "    {\\bf r}^{r} &= \\frac{ 1 }{ v^{2} } \\\\\n",
-    "    {\\bf p}^{r} &= 0 \\\\\n",
     "    {\\bf p}^{\\phi} &= v \\\\\n",
     "    {\\bf p}^{\\theta} &= 0.2.\n",
     "\\end{align*}\n",
     "\n",
-    "Find roots of $\\frac{ \\partial H }{ \\partial {\\bf r}^{0}}$, $\\frac{ \\partial H }{ \\partial {\\bf p}^{1}}$, and $\\frac{ \\partial H }{ \\partial {\\bf r}^{1}}$.  Convert the values to spherical values $\\frac{ \\partial H }{ \\partial {\\bf r}^{r}}$, $\\frac{ \\partial H }{ \\partial {\\bf p}^{\\phi}}$, and $\\frac{ \\partial H }{ \\partial {\\bf r}^{\\theta}}$...\n",
+    "The root finder seeks to solve\n",
     "\n",
-    "In the end, we should have a cartesian postition vector ${\\bf q}$ and momentum vector ${\\bf p}$."
+    "\\begin{equation*}\n",
+    "    \\begin{bmatrix} \\frac{ \\partial H }{ \\partial {\\bf r}^{r} } \\\\ \\frac{ \\partial H }{ \\partial {\\bf p}^{\\theta} } \\\\ \\frac{ \\partial H }{ \\partial {\\bf p}^{\\phi} } - \\omega \\end{bmatrix} = \\begin{bmatrix} 0 \\\\ 0 \\\\ 0 \\end{bmatrix}.\n",
+    "\\end{equation*}\n",
+    "\n",
+    "As the Hamiltonian is given in Cartesian coordinates, this requires computing $\\frac{ \\partial H }{ \\partial {\\bf r}^{0} }$, $\\frac{ \\partial H }{ \\partial {\\bf p}^{1} }$, and $\\frac{ \\partial H }{ \\partial {\\bf p}^{2} }$ and then converting to spherical coordinates via\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\frac{\\partial H}{\\partial {\\bf r}^{r}} &= \\frac{\\partial H}{\\partial {\\bf r}^{0}} - \\frac{\\frac{\\partial H}{\\partial {\\bf p}^{1}}{\\bf p}^{\\phi}}{\\left({\\bf r}^{r}\\right)^{2}} + \\frac{\\frac{\\partial H}{\\partial {\\bf p}^{2}}{\\bf p}^{\\theta}}{\\left({\\bf r}^{r}\\right)^{2}} \\\\\n",
+    "    \\frac{\\partial H}{\\partial {\\bf p}^{\\theta}} &= -\\frac{\\frac{\\partial H}{\\partial {\\bf p}^{2}}}{{\\bf r}^{r}} \\\\\n",
+    "    \\frac{\\partial H}{\\partial {\\bf p}^{\\phi}} &= \\frac{\\frac{\\partial H}{\\partial {\\bf p}^{1}}}{{\\bf r}^{r}}.\n",
+    "\\end{align*}</font>\n",
+    "\n",
+    "In the end, we should have a cartesian postition vector ${\\bf q}$ and momentum vector ${\\bf p}$.  It seems that because we stared with $\\iota = 0$ that we can use $\\hat{\\bf r}$ instead of $\\hat{\\bf q}$?"
    ]
   },
   {
