--- a/Tutorial-SEOBNR_Initial_Conditions.ipynb
+++ b/Tutorial-SEOBNR_Initial_Conditions.ipynb
@@ -12,8 +12,9 @@
     "\n",
     "### Throughout this module, we will refer to\n",
     "* [Pan, Buonanno, Buchman et. al. (2010)](https://arxiv.org/abs/0912.3466v2) as PBB2010,\n",
-    "* [Buonanno, Chen, and Damour (2006)](https://arxiv.org/abs/gr-qc/0508067) as BCD2006, and\n",
-    "* [Barausse and Buonanno (2010)](https://arxiv.org/abs/0912.3517) as BB2010.\n",
+    "* [Buonanno, Chen, and Damour (2006)](https://arxiv.org/abs/gr-qc/0508067) as BCD2006,\n",
+    "* [Barausse and Buonanno (2010)](https://arxiv.org/abs/0912.3517) as BB2010, and\n",
+    "* [Taracchini, et. al. (2012)](https://arxiv.org/abs/1202.0790) as T2012.\n",
     "\n",
     "<font color='green'>**This module has been validated against the LALSuite SEOBNRv3/SEOBNRv3_opt code that was reviewed and approved for LIGO parameter estimation by the LIGO Scientific Collaboration.**</font>"
    ]
@@ -66,6 +67,8 @@
     "We include below the physical parameters necessary to compute the initial conditions.  Solving for the initial conditions requires computing $\\frac{ \\partial H_{\\rm real} }{ \\partial p_{i} }$ for $i \\in \\left\\{ r, \\theta, \\phi \\right\\}$, <font color='red'>which we defer to another module</font>.\n",
     "\n",
     "<font color='red'>Please note that in [BCD2006](https://arxiv.org/abs/gr-qc/0508067) the initial conditions are solved for given an initial separation; here we use a given initial frequency instead.  The difference is in our approach to solving Equation (4.8).  Our approach also differs from that found in LALSuite's XLALSimIMRSpinEOBInitialConditionsPrec() function (file: LALSimIMRSpinEOBInitialConditionsPrec.c) because we choose our intial coordinate system so that the inclination angle $\\iota$ is zero (this simplifies their step one and step five).</font>\n",
+    "\n",
+    "Keep in mind that we take tortoise = 0 until the end (see LALSimIMRSpinPrecEOB.c Line 775).\n",
     "\n",
     "Besides the physical parameters, we also need the [Euler–Mascheroni constant](https://en.wikipedia.org/wiki/Euler%E2%80%93Mascheroni_constant) $\\gamma$ and the [geomtrized](https://en.wikipedia.org/wiki/Geometrized_unit_system) solar mass $\\mathcal{M}_{\\odot}$, both hard-coded in LALSuite with the significant digits shown below.  (The following links are directed to the appropriate LALSuite documentation: [$\\gamma$](https://lscsoft.docs.ligo.org/lalsuite/lal/group___l_a_l_constants__h.html#gac6af32574ff8acaeeafe8bf422281e98) and [$\\mathcal{M}_{\\odot}$](https://lscsoft.docs.ligo.org/lalsuite/lal/group___l_a_l_constants__h.html#gab83f8c705dda3fd0bb2d5f2470bb9cdd).)"
    ]
@@ -366,9 +369,9 @@
    "outputs": [],
    "source": [
     "q0 = 1.\n",
-    "q1 = 1.\n",
-    "q2 = 1.\n",
-    "p0 = 1.\n",
+    "q1 = 0.\n",
+    "q2 = 0.\n",
+    "p0 = 0.\n",
     "p1 = 1.\n",
     "p2 = 1."
    ]
@@ -390,7 +393,7 @@
     "## Note \\[Back to [top](#toc)\\]\n",
     "\n",
     "\n",
-    "At this point, see LALSimIMRSpinEOBInitialConditionsPrec.c normalizes the Cartesian separation and momentum vectors constructed in [Step 2](#step2).  We already have a normalized separation vector $\\hat{\\bf r}$, so we skip that step."
+    "At this point, LALSimIMRSpinEOBInitialConditionsPrec.c normalizes the Cartesian separation and momentum vectors constructed in [Step 2](#step2).  We already have a normalized separation vector $\\hat{\\bf r}$, so we skip that step."
    ]
   },
   {
@@ -473,15 +476,7 @@
     "        \\hat{\\bf L}^{0} & \\hat{\\bf L}^{1} & \\hat{\\bf L}^{2}\\end{bmatrix}.\n",
     "\\end{equation*}\n",
     "\n",
-    "<font color='red'>The matrix to invert the rotation is simply the transpose:</font>\n",
-    "\n",
-    "\\begin{equation*}\n",
-    "    \\begin{bmatrix} \\hat{\\bf r}^{0} & \\hat{\\bf p}^{0} & \\hat{\\bf L}^{0} \\\\\n",
-    "        \\hat{\\bf r}^{1} & \\hat{\\bf p}^{1} & \\hat{\\bf L}^{1} \\\\\n",
-    "        \\hat{\\bf r}^{2} & \\hat{\\bf p}^{2} & \\hat{\\bf L}^{2}\\end{bmatrix}.\n",
-    "\\end{equation*}\n",
-    "\n",
-    "To see that this is indeed the correct matrix inverse, note that by construction $\\hat{\\bf q}$, $\\hat{\\bf p}$, and $\\hat{\\bf L}$ are all unit vectors orthogonal to one another.  See LALSimIMRSpinEOBInitialConditionsPrec.c Line 1107."
+    "See LALSimIMRSpinEOBInitialConditionsPrec.c Line 1107."
    ]
   },
   {
@@ -734,13 +729,13 @@
     "## Rotate ${\\bf r}$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{rotater}$$\n",
     "\n",
-    "We rotate ${\\bf p}$.  We'll use primes to denote the rotated vector.\n",
+    "We rotate ${\\bf r} = {\\bf q}$.  We'll use primes to denote the rotated vector.\n",
     "\n",
     "\\begin{equation*}\n",
     "    {\\bf r}^{\\prime} = \\begin{bmatrix} \\hat{\\bf r}^{0} & \\hat{\\bf r}^{1} & \\hat{\\bf r}^{2} \\\\\n",
     "        \\hat{\\bf p}^{0} & \\hat{\\bf p}^{1} & \\hat{\\bf p}^{2} \\\\\n",
     "        \\hat{\\bf L}^{0} & \\hat{\\bf L}^{1} & \\hat{\\bf L}^{2}\\end{bmatrix}\n",
-    "        \\begin{bmatrix} {\\bf r}^{0} \\\\ {\\bf r}^{1} \\\\ {\\bf r}^{2} \\end{bmatrix}\n",
+    "        \\begin{bmatrix} {\\bf q}^{0} \\\\ {\\bf q}^{1} \\\\ {\\bf q}^{2} \\end{bmatrix}\n",
     "\\end{equation*}\n",
     "\n",
     "See LALSimIMRSpinEOBInitialConditionsPrec.c Line 1119."
@@ -752,9 +747,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rprm0 = rhat0*p0 + rhat1*p1 + rhat2*p2\n",
-    "rprm1 = phat0*p0 + phat1*p1 + phat2*p2\n",
-    "rprm2 = Lhat0*p0 + Lhat1*p1 + Lhat2*p2"
+    "rprm0 = rhat0*q0 + rhat1*q1 + rhat2*q2\n",
+    "rprm1 = phat0*q0 + phat1*q1 + phat2*q2\n",
+    "rprm2 = Lhat0*q0 + Lhat1*q1 + Lhat2*q2"
    ]
   },
   {
@@ -772,7 +767,7 @@
     "    {\\bf p}^{\\prime} = \\begin{bmatrix} \\hat{\\bf r}^{0} & \\hat{\\bf r}^{1} & \\hat{\\bf r}^{2} \\\\\n",
     "        \\hat{\\bf p}^{0} & \\hat{\\bf p}^{1} & \\hat{\\bf p}^{2} \\\\\n",
     "        \\hat{\\bf L}^{0} & \\hat{\\bf L}^{1} & \\hat{\\bf L}^{2}\\end{bmatrix}\n",
-    "        \\begin{bmatrix} {\\bf p}^{0} \\\\ {\\bf p}^{y} \\\\ {\\bf p}^{2} \\end{bmatrix}\n",
+    "        \\begin{bmatrix} {\\bf p}^{0} \\\\ {\\bf p}^{1} \\\\ {\\bf p}^{2} \\end{bmatrix}\n",
     "\\end{equation*}\n",
     "\n",
     "See LALSimIMRSpinEOBInitialConditionsPrec.c Line 1120."
@@ -979,7 +974,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Hreal = 0"
+    "Hreal = 1."
    ]
   },
   {
@@ -1017,20 +1012,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='l'></a>\n",
+    "<a id='vphikepler'></a>\n",
     "\n",
-    "## Compute ${\\bf L}$ \\[Back to [top](#toc)\\]\n",
-    "$$\\label{l}$$\n",
+    "## vPhiKepler \\[Back to [top](#toc)\\]\n",
+    "$$\\label{vphikepler}$$\n",
     "\n",
-    "<font color='red'>This is where we begin the process of computing the flux!</font>\n",
-    "\n",
-    "We compute ${\\bf L} = {\\bf r}^{\\prime}\\times{\\bf p}^{\\prime}$ and normalize as follows.\n",
+    "From [T2012](https://arxiv.org/abs/1202.0790) Equation (A2),\n",
     "\n",
     "\\begin{equation*}\n",
-    "    {\\bf L} = \\frac{ {\\bf r}^{\\prime} \\times {\\bf p}^{\\prime} }{ \\left\\lvert {\\bf r}^{\\prime} \\times {\\bf p}^{\\prime} \\right\\rvert }\n",
+    "    {\\rm vPhiKepler} = \\frac{ 1 }{ \\omega^{2} \\left( {\\bf r}^{r} \\right)^{3} }.\n",
     "\\end{equation*}\n",
     "\n",
-    "See LALSimIMRSpinEOBFactorizedFluxPrec_v3opt.c lines 121--129."
+    "See LALSimIMRSpinEOBFactorizedWaveformPrec_v3opt.c Lines 113 and 1271--1315."
    ]
   },
   {
@@ -1039,109 +1032,104 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "L0 = rprm1*pprm2 - rprm2*pprm1\n",
-    "L1 = rprm2*pprm0 - rprm0*pprm2\n",
-    "L2 = rprm0*pprm1 - rprm1*pprm0\n",
-    "Lmaginv = 1./sp.sqrt(L0*L0 + L1*L1 + L2*L2)\n",
-    "L0 /= Lmaginv\n",
-    "L1 /= Lmaginv\n",
-    "L2 /= Lmaginv"
+    "vPhiKepler = 1./(omega*omega*rr*rr*rr)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='sidotl'></a>\n",
+    "<a id='rcrossp'></a>\n",
     "\n",
-    "## ${\\bf S}_{i}\\cdot{\\bf L}$ \\[Back to [top](#toc)\\]\n",
-    "$$\\label{sidotl}$$\n",
+    "## ${\\bf r} \\times {\\bf p}$ \\[Back to [top](#toc)\\]\n",
+    "$$\\label{rcrossp}$$\n",
     "\n",
-    "We compute ${\\bf S}_{1}\\cdot{\\bf L}$ and ${\\bf S}_{2}\\cdot{\\bf L}$.\n",
-    "\n",
-    "See LALSimIMRSpinEOBFactorizedFluxPrec_v3opt.c lines 131--134."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s1dotL = S1hatprm0*L0 + S1hatprm1*L1 + S1hatprm2*L2\n",
-    "s2dotL = S2hatprm0*L0 + S2hatprm1*L1 + S2hatprm2*L2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='chii'></a>\n",
-    "\n",
-    "## $\\boldsymbol{\\chi}_{\\rm S}$, $\\boldsymbol{\\chi}_{\\rm A}$ \\[Back to [top](#toc)\\]\n",
-    "$$\\label{chii}$$\n",
-    "\n",
-    "We compute ${\\bf S}_{1}\\cdot{\\bf L}$ and ${\\bf S}_{2}\\cdot{\\bf L}$.\n",
-    "\n",
-    "See LALSimIMRSpinEOBFactorizedFluxPrec_v3opt.c lines 136--137."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "chiS = 0.5*(s1dotL + s2dotL)\n",
-    "chiA = 0.5*(s1dotL - s2dotL)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='tplspin'></a>\n",
-    "\n",
-    "## Test-Particle Limit Spin \\[Back to [top](#toc)\\]\n",
-    "$$\\label{tplspin}$$\n",
-    "\n",
-    "We compute the test-particle limit spin of the deformed Kerr background:\n",
+    "We'll use the notation\n",
     "\n",
     "\\begin{equation*}\n",
-    "    {\\rm tplspin} = \\left( 1 - 2 \\eta \\right) \\chi_{\\rm S} + \\frac{ m_{1} - m_{2} }{ m_{1} + m_{2} } \\chi_{\\rm A}\n",
+    "    {\\rm rcrossp} = {\\bf r}^{\\prime} \\times {\\bf p}^{\\prime}.\n",
     "\\end{equation*}\n",
     "\n",
-    "See LALSimIMRSpinEOBFactorizedFluxPrec_v3opt.c lines 148--149."
+    "See LALSimIMRSpinEOBFactorizedWaveformPrec_v3opt.c Lines 170--172."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tplspin = (1 - 2*eta)*chiS + (m1 - m2)/(m1 + m2)*chiA"
+    "rcrossp0 = rprm1*pprm2 - rprm2*pprm1\n",
+    "rcrossp1 = rprm2*pprm0 - rprm0*pprm2\n",
+    "rcrossp2 = rprm0*pprm1 - rprm1*pprm0"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## We now have to recompute coefficients... \\[Back to [top](#toc)\\]\n",
+    "<a id='vphi'></a>\n",
     "\n",
-    "<font color='red'>This is false.  There's a large chunk of code in LALSimIMRSpinEOBFactorizedFluxPrec_v3opt.c that is inside an \"if(0)\" conditional and therefore not exectued (Lines 107--184)."
+    "## vPhi \\[Back to [top](#toc)\\]\n",
+    "$$\\label{vphi}$$\n",
+    "\n",
+    "We'll use the notation\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "    {\\rm vPhi} = \\omega*{\\bf r}^{r} \\sqrt[3]{\\rm vPhiKepler}.\n",
+    "\\end{equation*}\n",
+    "\n",
+    "See LALSimIMRSpinEOBFactorizedWaveformPrec_v3opt.c Lines 185 and 190."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vPhi = omega*rr*sp.cbrt(vPhiKepler)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id=''></a>\n",
+    "<a id='newtonianmultipole'></a>\n",
     "\n",
-    "## Test-Particle Limit Spin \\[Back to [top](#toc)\\]\n",
-    "$$\\label{tplspin}$$\n",
+    "## Newtonian multipole \\[Back to [top](#toc)\\]\n",
+    "$$\\label{newtonianmultipole}$$\n",
     "\n",
-    "In order to find the flux, we need to build the matrix \"hLMTab\".  And to do that, we need to find some Kepler coefficient..."
+    "We'll use the notation\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "    {\\rm vPhi} = {\\bf r}^{r} \\sqrt[3]{\\rm vPhiKepler}.\n",
+    "\\end{equation*}\n",
+    "\n",
+    "See LALSimIMRSpinEOBFactorizedWaveformPrec_v3opt.c Lines 185 and 190."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='hlmtab'></a>\n",
+    "\n",
+    "## hLMTab \\[Back to [top](#toc)\\]\n",
+    "$$\\label{hlmtab}$$\n",
+    "\n",
+    "In order to find the flux, we need to build the matrix \"hLMTab\".  See [T2012](https://arxiv.org/abs/1202.0790) Equation (17) and the Appendix, along with [this private LIGO doc](https://dcc.ligo.org/T1400476)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for l in range(2, 8):\n",
+    "    for m in range(1, l):\n",
+    "        "
    ]
   },
   {
