SEOBNR: update initial condition solver.

--- a/Tutorial-SEOBNR_Factorized_Modes.ipynb
+++ b/Tutorial-SEOBNR_Factorized_Modes.ipynb
@@ -69,7 +69,7 @@
    "outputs": [],
    "source": [
     "import sympy as sp\n",
-    "m1,m2,eta,a,chiA,chiS = sp.symbols(\"m1 m2 eta a chiA chiS\",real=True)"
+    "m1,m2,eta,S1x,S1y,S1z,S2x,S2y,S2z,a,chiS,chiA = sp.symbols(\"m1 m2 eta S1x S1y S1z S2x S2y S2z a chiS chiA\",real=True)"
    ]
   },
   {
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,34 +211,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='rho21'></a>\n",
-    "\n",
-    "## $\\rho_{21}$ \\[Back to [top](#toc)\\]\n",
-    "$$\\label{rho21}$$\n",
-    "\n",
-    "Combining [T2012](https://arxiv.org/abs/1202.0790) Equation (A8b) and [P2011](https://arxiv.org/abs/1006.0431) Equation (29b),\n",
-    "\n",
-    "\\begin{equation*}\n",
-    "    \\rho_{21} = \\ldots\n",
-    "\\end{equation*}\n",
-    "\n",
-    "<font color='red'>It seems there's not an exact overlap in equations (that we're not including all terms; it may be some are refined in the later paper).  It's also not clear to me what $v$ is.  There's an additional term on LALSimIMRSpinEOBFactorizedWaveformCoefficientsPrec.c Line 138 for which I need a source.  Determine if\n",
-    "\n",
-    "\\begin{align*}\n",
-    "a &= \\chi_{\\rm S} \\left( 1 - \\eta \\right) + \\chi_{\\rm A} \\delta m \\\\\n",
-    "\\left( \\chi_{\\rm S} \\left( 1 - \\eta \\right) + \\chi_{\\rm A} \\delta m \\right)^{2} &= \\left( \\chi_{\\rm S} + \\chi_{\\rm A} \\delta m \\right)^{2}\n",
-    "\\end{align*}\n",
-    "and how $a$ relates to these (they seem to be used interchangably?).</font>.\n",
-    "\n",
-    "We will write each coefficient separately."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,8 +220,65 @@
     "delta21vh6 = (107.*sp.pi)/105.\n",
     "delta21vh9 = -272./81. + (214.*sp.pi*sp.pi)/315.\n",
     "delta21v5 = -493.*eta/42.\n",
-    "delta21v7 = 0.0"
+    "delta21v7 = 0.0\n",
+    "rho21v7l = 107.*a/140.\n",
+    "rho21v8 = -1168617463883./911303737344.\n",
+    "rho21v8l = 6313./5880.\n",
+    "rho21v10 = -63735873771463./16569158860800.\n",
+    "rho21v10l = 5029963./5927040.\n",
+    "f21v1 = (-3.*(chiS + chiA/deltam))/(2.)\n",
+    "f21v3 = (chiS*deltam*(427. + 79.*eta) + chiA*(147. + 280.*deltam*deltam + 1251.*eta))/84./deltam\n",
+    "delta33vh3 = 13./10.\n",
+    "delta33vh6 = (39.*sp.pi)/7.\n",
+    "delta33vh9 = -227827./3000. + (78.*sp.pi*sp.pi)/7.\n",
+    "delta33v5 = -80897.*eta/2430.\n",
+    "rho33v2 = -7./6. + (2.*eta)/3.\n",
+    "rho33v3 = 0.0\n",
+    "rho33v4 = -6719./3960. + a*a/2. - (1861.*eta)/990. + (149.*eta*eta)/330.\n",
+    "rho33v5 = (-4.*a)/3.\n",
+    "rho33v6 = 3203101567./227026800. + (5.*a*a)/36.\n",
+    "rho33v6l = -26./7.\n",
+    "rho33v7 = (5297.*a)/2970. + a*a*a/3.\n",
+    "rho33v8 = -57566572157./8562153600.\n",
+    "rho33v8l = 13./3.\n",
+    "f33v3 = (chiS*deltam*(-4. + 5.*eta) + chiA*(-4. + 19.*eta))/(2.*deltam)\n",
+    "delta32vh3 = (10. + 33. * eta) / (-15.*(m1 + 3*eta))\n",
+    "delta32vh4 = 0\n",
+    "delta32vh6 = (52.*sp.pi)/21.\n",
+    "delta32vh9 = -9112./405. + (208.*sp.pi*sp.pi)/63.\n",
+    "rho32v = (4.*chiS*eta)/(-3.*(m1 + 3*eta))\n",
+    "rho32v2 = (-4.*a*a*eta*eta)/(9.*(m1 + 3*eta)**2) + (328. - 1115.*eta + 320.*eta*eta)/(270.*(m1 + 3*eta));                                                                                                                                \n",
+    "rho32v3 = 2./9.*a\n",
+    "rho32v4 = a*a/3. + (-1444528. + 8050045.*eta - 4725605.*eta*eta - 20338960.*eta*eta*eta + 3085640.*eta*eta*eta*eta)/(1603800.*(m1 + 3*eta)**2)\n",
+    "rho32v5 = (-2788.*a)/1215.\n",
+    "rho32v6 = 5849948554./940355325. + (488.*a*a)/405.\n",
+    "rho32v6l = -104./63.\n",
+    "rho32v8 = -10607269449358./3072140846775.\n",
+    "rho32v8l = 17056./8505.\n",
+    "\n",
+    "delta31vh3 = 13./30.\n",
+    "delta31vh6 = (13.*sp.pi)/21.\n",
+    "delta31vh7 = 0\n",
+    "delta31vh9 = -227827./81000. + (26.*sp.pi*sp.pi)/63.\n",
+    "delta31v5 = -17.*eta/10.\n",
+    "rho31v2 = -13./18. - (2.*eta)/9.\n",
+    "rho31v3 = 0.0\n",
+    "rho31v4 = 101./7128. - (5.*a*a)/6. - (1685.*eta)/1782. - (829.*eta*eta)/1782.\n",
+    "rho31v5 = (4.*a)/9.\n",
+    "rho31v6 = 11706720301./6129723600. - (49.*a*a)/108.\n",
+    "rho31v6l = -26./63.\n",
+    "rho31v7 = (-2579.*a)/5346. + a*a*a/9.\n",
+    "rho31v8 = 2606097992581./4854741091200.\n",
+    "rho31v8l = 169./567.\n",
+    "f31v3 = (chiA * (-4. + 11.*eta) + chiS*deltam*(-4. + 13.*eta))/(2.*deltam)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
