Major update: Brandon Clark's new Method of Lines module (Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide uses it now); Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_Exact_Initial_Data now performs validations on *all* exact BSSN curvilinear modules; Tutorial-cmdline_helper: multi-platform command-line helper

--- a/Tutorial-ADM_Initial_Data-ShiftedKerrSchild.ipynb
+++ b/Tutorial-ADM_Initial_Data-ShiftedKerrSchild.ipynb
@@ -11,7 +11,9 @@
     "\n",
     "## This module sets up Shifted Kerr-Schild initial data [Etienne et al., 2017 GiRaFFE](https://arxiv.org/pdf/1704.00599.pdf).\n",
     "\n",
-    "<font color='green'>**This module has been validated to exhibit convergence to zero of the Hamiltonian and momentum constraint violations at the expected order to the exact solution (see [start-to-finish Shifted Kerr-Schild module](Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_Shifted_KerrSchild_initial_data.ipynb) for full analysis).**</font>\n",
+    "**Module Status:** <font color='green'><b> Validated </b></font>\n",
+    "\n",
+    "**Validation Notes:** This module has been validated to exhibit convergence to zero of the Hamiltonian and momentum constraint violations at the expected order to the exact solution (see plots at bottom of [the exact initial data validation start-to-finish tutorial module](Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_Exact_Initial_Data.ipynb)).\n",
     "\n",
     "### NRPy+ Source Code for this module: [BSSN/ShiftedKerrSchild.py](../edit/BSSN/ShiftedKerrSchild.py)\n",
     "\n",
@@ -38,7 +40,7 @@
     "1. [Step 3](#extrinsic_curvature): The extrinsic curvature $K_{ij}$\n",
     "    1. [Step 3.a](#abc): Define useful quantities $A$, $B$, $C$\n",
     "    1. [Step 3.b](#nonzero_k): Define and construct nonzero components of $K_{ij}$\n",
-    "1. [Step 4](#code_validation): Code Validation against BSSN.ShiftedKerrSchild NRPy+ module\n",
+    "1. [Step 4](#code_validation): Code Validation against `BSSN.ShiftedKerrSchild` NRPy+ module\n",
     "1. [Step 5](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF"
    ]
   },
@@ -365,7 +367,7 @@
    "source": [
     "<a id='code_validation'></a>\n",
     "\n",
-    "# Step 4: Code Validation against BSSN.ShiftedKerrSchild NRPy+ module \\[Back to [top](#toc)\\]\n",
+    "# Step 4: Code Validation against `BSSN.ShiftedKerrSchild` NRPy+ module \\[Back to [top](#toc)\\]\n",
     "$$\\label{code_validation}$$\n",
     "\n",
     "Here, as a code validation check, we verify agreement in the SymPy expressions for Shifted Kerr-Schild initial data between\n",
@@ -469,7 +471,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ADM_Initial_Data-ShiftedKerrSchild.ipynb to latex\n",
-      "[NbConvertApp] Writing 52871 bytes to Tutorial-ADM_Initial_Data-ShiftedKerrSchild.tex\n",
+      "[NbConvertApp] Writing 50382 bytes to Tutorial-ADM_Initial_Data-ShiftedKerrSchild.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
