--- a/NRPyPlus_Tutorial.ipynb
+++ b/NRPyPlus_Tutorial.ipynb
@@ -18,15 +18,24 @@
     "\n",
     "### Lead author: [Zachariah B. Etienne](http://math.wvu.edu/~zetienne/) $\\leftarrow$ Please feel free to email comments, revisions, or errata! \n",
     "\n",
+    "***If you are unfamiliar with using Jupyter Notebooks, first review the official [Jupyter Notebook Basics Guide](https://nbviewer.jupyter.org/github/jupyter/notebook/blob/master/docs/source/examples/Notebook/Notebook%20Basics.ipynb).***\n",
+    "\n",
     "### PART 1: Basic Functionality of NRPy+, a First Application\n",
     "##### NRPy+ Basics\n",
     "+ [NRPy+: Introduction & Motivation](https://math.wvu.edu/~zetienne/SENR/nrpy) (NRPy+ home page)\n",
     "+ [Basic C Code Output, NRPy+'s Parameter Interface](Tutorial-Coutput__Parameter_Interface.ipynb)\n",
+    "+ [`cmdline_helper`: Compiling and executing C Code from NRPy+](Tutorial-cmdline_helper.ipynb)\n",
     "+ [Numerical Grids](Tutorial-Numerical_Grids.ipynb)\n",
     "+ [Indexed Expressions (e.g., tensors, pseudotensors, etc.)](Tutorial-Indexed_Expressions.ipynb)\n",
     "+ [Finite Difference Derivatives](Tutorial-Finite_Difference_Derivatives.ipynb)\n",
     "    + Instructional module: [How NRPy+ Computes Finite Difference Derivative Coefficients](Tutorial-How_NRPy_Computes_Finite_Difference_Coeffs.ipynb)\n",
     "    + **Start-to-Finish Example**: [Finite-Difference Playground: A Complete C Code for Validating NRPy+-Based Finite Differences](Tutorial-Start_to_Finish-Finite_Difference_Playground.ipynb)\n",
+    "+ Method of Lines for PDEs: Step PDEs forward in time using ODE methods\n",
+    "    + Solving ODEs using explicit Runge Kutta methods (*Courtesy Brandon Clark*)\n",
+    "        + [The Family of Explicit Runge-Kutta methods and their Butcher tables](Tutorial-RK_Butcher_Table_Dictionary.ipynb)\n",
+    "        + [Validating Runge Kutta Butcher tables using Truncated Taylor Series](Tutorial-RK_Butcher_Table_Validation.ipynb)\n",
+    "    + [Generating C Code to implement Method of Lines timestepping with Explicit Runge Kutta-like methods](Tutorial-Method_of_Lines-C_Code_Generation.ipynb) (*Courtesy Brandon Clark*)\n",
+    "+ [Writing your own NRPy+ module: A Style Guide](Tutorial-Template_Style_Guide.ipynb) (*Courtesy Brandon Clark*)\n",
     "\n",
     "### PART 2: Basic Physics Applications \n",
     "##### Using NRPy+ to Numerically Solve PDEs\n",
@@ -78,14 +87,9 @@
     "    + [Neutron Star initial data: The Tolman-Oppenheimer-Volkoff (TOV) solution](Tutorial-ADM_Initial_Data-TOV.ipynb) (*Courtesy Phil Chang*)\n",
     "+ **ADM-to-curvilinear-BSSN initial data conversion**\n",
     "    + [**Exact** ADM Spherical/Cartesian to BSSN Curvilinear Initial Data Conversion](Tutorial-ADM_Initial_Data-Converting_Exact_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb) (Use this module for initial data conversion if the initial data are known *exactly*. The BSSN quantity $\\lambda^i$ will be computed exactly using SymPy from given ADM quantities.)\n",
-    "        + **Start-to-Finish initial data validation modules**:\n",
-    "            + [Non-Spinning (\"static trumpet\") black hole initial data validation: numerical error convergence to zero](Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_Trumpet_BH_initial_data.ipynb) (*Courtesy Terrence Pierre Jacques*)\n",
-    "            + [Spinning (Shifted Kerr-Schild) black hole initial data validation: numerical error convergence to zero](Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_Shifted_KerrSchild_initial_data.ipynb) (*Courtesy George Vopal*)\n",
-    "            + [Two-black-hole initial data validation: numerical error convergence to zero](Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_two_BH_initial_data.ipynb)\n",
+    "        + [**Start-to-Finish *exact* initial data validation module**](Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_Exact_Initial_Data.ipynb): Confirms all exact initial data types listed above satisfy Einstein's equations of general relativity. (*Courtesy Brandon Clark & George Vopal*)\n",
     "    + [**Numerical** ADM Spherical/Cartesian to BSSN Curvilinear Initial Data Conversion](Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb) (Use this module for initial data conversion if the initial data are provided by an initial data solver, and are thus known to roundoff error at best. The BSSN quantity  $\\lambda^i$ will be computed using finite-difference derivatives from given ADM quantities.)\n",
-    "        + **Start-to-Finish initial data validation modules**: (Note that UIUC black hole initial data are *exact*; however we choose to set them up as though they were only known numerically, as a validation test for the **numerical** ADM-Spherical-to-BSSN-Curvilinear initial data conversion module. TOV initial data on the other hand are generated via [the solution of a system of ODEs](https://en.wikipedia.org/wiki/Tolman%E2%80%93Oppenheimer%E2%80%93Volkoff_equation), thus are truly known only numerically):\n",
-    "            + [Spinning (\"UIUC\") black hole initial data validation: numerical error convergence to zero](Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_spinning_UIUC_BH_initial_data.ipynb)\n",
-    "            + [Neutron star (TOV solution) initial data validation: numerical error convergence to zero](Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_TOV_initial_data.ipynb)\n",
+    "        + [**Start-to-Finish *numerical* initial data validation module**: The TOV solution](Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_TOV_initial_data.ipynb): Neutron star initial data, confirms numerical errors converge to zero at expected order (TOV initial data are generated via [the *numerical* solution of a system of ODEs](https://en.wikipedia.org/wiki/Tolman%E2%80%93Oppenheimer%E2%80%93Volkoff_equation), thus are known only numerically)\n",
     "+ **Diagnostic curvilinear BSSN modules**\n",
     "    + [The gravitational wave Weyl scalar $\\psi_4$, in arbitrary curvilinear coordinates](Tutorial-Psi4.ipynb)\n",
     "        + [Constructing the quasi-Kinnersley tetrad for $\\psi_4$](Tutorial-Psi4_tetrads.ipynb)\n",
