cmdline_helper tutorial module: Improve title

--- a/NRPyPlus_Tutorial.ipynb
+++ b/NRPyPlus_Tutorial.ipynb
@@ -24,7 +24,7 @@
     "##### NRPy+ Basics\n",
     "+ [NRPy+: Introduction & Motivation](https://math.wvu.edu/~zetienne/SENR/nrpy) (NRPy+ home page)\n",
     "+ [Basic C Code Output, NRPy+'s Parameter Interface](Tutorial-Coutput__Parameter_Interface.ipynb)\n",
-    "+ [`cmdline_helper`: Compiling and executing C Code from NRPy+](Tutorial-cmdline_helper.ipynb) (*Courtesy Brandon Clark*)\n",
+    "+ [`cmdline_helper`: Multi-platform command-line helper functions](Tutorial-cmdline_helper.ipynb) (*Courtesy Brandon Clark*)\n",
     "+ [Numerical Grids](Tutorial-Numerical_Grids.ipynb)\n",
     "+ [Indexed Expressions (e.g., tensors, pseudotensors, etc.)](Tutorial-Indexed_Expressions.ipynb)\n",
     "+ [Finite Difference Derivatives](Tutorial-Finite_Difference_Derivatives.ipynb)\n",
