--- a/Tutorial-Method_of_Lines-C_Code_Generation.ipynb
+++ b/Tutorial-Method_of_Lines-C_Code_Generation.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "### NRPy+ Source Code for this module: \n",
     "* [MoLtimestepping/C_Code_Generation.py](../edit/MoLtimestepping/C_Code_Generation.py)\n",
-    "* [MoLtimestepping/RK_Butcher_Table_Dictionary.py](../edit/MoLtimestepping/RK_Butcher_Table_Dictionary.py) [**Tutorial**](Tutorial-RK_Butcher_Table_Dictionary.ipynb)) Stores the Butcher tables for the explicit Runge Kutta methods\n",
+    "* [MoLtimestepping/RK_Butcher_Table_Dictionary.py](../edit/MoLtimestepping/RK_Butcher_Table_Dictionary.py) ([**Tutorial**](Tutorial-RK_Butcher_Table_Dictionary.ipynb)) Stores the Butcher tables for the explicit Runge Kutta methods\n",
     "\n",
     "## Introduction:\n",
     "\n",
